# darma-frontend

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  LICENSE  Makefile.example  README  README.md  SetDarmaCompilerFlags.cmake
backend_validation/: CMakeLists.txt  Makefile.example  backend_functions.txt  check_backend_coverage.sh  helpers.h  main.h  mock_frontend.h  mock_frontend.h.mod  print_backend_coverage.pl  test_backend.h  test_darma_backend_initialize.cc  test_death.cc  test_fetchers.cc  test_get_running_task.cc  test_register_task.cc  test_runtime_release_handle.cc
backend_validation/using_mock_frontend/: CMakeLists.txt  frontend_types.h  helpers.h  main.cc  main.h  mock_frontend.h  test_backend.h  test_register_task.cc
backend_validation/using_real_frontend/: CMakeLists.txt  helpers.h  main.cc  test_backend.h  test_create_condition_be.cc  test_create_work_be.cc  test_flows_be.cc  test_init_be.cc  test_publish_be.cc
backends/: CMakeLists.txt
backends/mock/: darma_types.h  mock_backend.cc  mock_backend.h
backends/serial/: CMakeLists.txt  darma_types.h  serial_backend.cc  serial_backend.h
backends/stl_threads/: CMakeLists.txt  darma_types.h  threads_backend.cc
examples/: CMakeLists.txt  README  examp_add_todo.txt
examples/0.2/: CMakeLists.txt
examples/0.2/darma_hello/: CMakeLists.txt  darma_hello.cc
examples/0.2/heat_1d/: common_heat1d.h
examples/0.2/poisson_1d_thomasAlgorithm/: common_poisson1d.h  constants.h
examples/0.2/simple_kv/: CMakeLists.txt  description.txt  publish_get_parallel.cc
examples/0.2/spec02individualFunctionalities/: CMakeLists.txt  accessHandle1.cc  accessHandleArrowOperator.cc  cw1.cc  cwReadsArg.cc  initialAccess.cc  publishAndReadAccess.cc  rankAndSize.cc  version.cc
examples/0.3/: CMakeLists.txt
examples/0.3/create_condition/: CMakeLists.txt  collectives.h  main.cc
examples/0.3/darma_hello/: CMakeLists.txt  darma_hello.cc
examples/0.3/poisson_1d_thomasAlgorithm/: CMakeLists.txt
examples/0.4/: CMakeLists.txt
examples/0.4/fib/: CMakeLists.txt  fib.cc
examples/0.4/fib_nokey/: CMakeLists.txt  fib_nokey.cc
examples/0.4/fib_region/: CMakeLists.txt  fib_region.cc
examples/0.4/jacobi_2d/: CMakeLists.txt  jacobi_2d.cc
examples/0.4/overlap_reduce/: CMakeLists.txt  overlap_reduce.cc
examples/0.4/persistent_square_roots/: CMakeLists.txt  persistent_roots.cc
examples/0.4/region_square_roots/: CMakeLists.txt  square_roots.cc
examples/0.4/sequence_reduce/: CMakeLists.txt  sequence_reduce.cc
examples/0.4/simple_collection/: CMakeLists.txt  simple_collection.cc
examples/0.4/simple_collection_convergence/: CMakeLists.txt  simple_collection_convergence.cc
examples/0.4/simple_collection_fetch/: CMakeLists.txt  simple_collection_fetch.cc
examples/0.4/simple_collection_iter/: CMakeLists.txt  simple_collection_iter.cc
examples/0.4/simple_collection_multidim/: CMakeLists.txt  index_md.h  simple_collection_multidim.cc
examples/0.4/simple_collection_ordering/: CMakeLists.txt  simple_collection_ordering.cc
examples/0.4/simple_collection_remap/: CMakeLists.txt  simple_collection_remap.cc
examples/0.4/simple_collection_unique_owner/: CMakeLists.txt  simple_collection_unique_owner.cc
examples/0.4/simple_reduce/: CMakeLists.txt  simple_reduce.cc
examples/0.4/simulated_load_imbalance/: CMakeLists.txt  imbal_functions.h  sim_bal_charm.cc  sim_bal_charm.ci  sim_bal_mpi.cc  sim_imbal.cc  sim_imbal_mpi.cc
examples/0.4/tutorial/: CMakeLists.txt
examples/UQ/heat_1D_stochDiffusivity_sharedInitCondition/: different_implementation.cc  heat_1d_stochDiffusiv.cc
examples/darma_hello/: CMakeLists.txt  darma_hello.cc  description.txt  dharma_hello.cc
examples/darma_rank/: CMakeLists.txt  description.txt  rank.cc
examples/dharma_hello/: description.txt  dharma_hello.cc
examples/dharma_rank/: description.txt  rank.cc
examples/dot_product/: description.txt  dot_product_fr.cc  dot_product_hk.cc
examples/heat_1D_dharma_simple/: heat_1d_dharma_simple.cc
examples/heat_1d/: CMakeLists.txt  common_heat1d.h
examples/heat_1d/heat_1D_MPI_v1/: Makefile  heat_1d_v1  heat_1d_v1.cc
examples/hello/: hello.cc  intel_demo.cc  simple_hello.cc  solver_demo.cc  version_tracking.cc
examples/poisson_1d_thomasAlgorithm/: CMakeLists.txt  common_poisson1d.h
examples/simple_hello/: CMakeLists.txt  simple_hello.cc
examples/simple_kv/: description.txt  publish_get_parallel.cc  publish_get_serial.cc
examples/simple_pic/: CMakeLists.txt  Mesh.h  Particles.h  simple_pic.cc
examples/spec02individualFunctionalities/: CMakeLists.txt  accessHandle1.cc  accessHandleArrowOperator.cc  cw1.cc  cwReadsArg.cc  initAndFinalize.cc  initialAccess.cc  list.txt  publishAndReadAccess.cc  rankAndSize.cc  version.cc
examples/spmv/: description.txt
examples/stencil_1d/: common.h
examples/stupid_pic/: stupid_pic.cc
src/: CMakeLists.txt  create_work.h  darma.h  darma_assert.h  data_store.h  dependency.h  dharma.h  dharma_assert.h  handle.h  key.h  key_fwd.h  runtime.h  serialization.h  serialization_builtin.h  spmd.h  task.h  task_fwd.h  task_input.h  task_input_fwd.h  types_for_backend.h  util.h  version.h
src/abstract/: abstract_data_store.h  abstract_dependency.h  abstract_input.h  abstract_input_list.h  abstract_output.h  abstract_runtime.h  abstract_task_child.h  abstract_task_parent.h
src/darma/: create_work.h  darma.h  darma_assert.h  handle.h  spmd.h  util.h
src/include/: CMakeLists.txt  darma.h
src/keyword_arguments/: get_kwarg.h  keyword_argument_name.h  keyword_arguments.h  keyword_tag.h  kwarg_expression.h  kwarg_expression_fwd.h  kwarg_select_helper.h  macros.h
src/meta/: filter_types.h  indices_where.h  largest_aligned.h  member_detector.h  metaprogramming.h  move_if.h  sentinal_type.h  tuple_for_each.h  wrap_with_template.h
src/reference_backends/: CMakeLists.txt
src/tests/: CMakeLists.txt  metatest_helpers.h  test_keyword_arguments.cc
src/tinympl/: accumulate.hpp  apply.hpp  copy_n.hpp  equal_to.hpp  int.hpp  map.hpp  metafunction_class_wrapper.hpp  set_union.hpp  size.hpp  sort.hpp
(+1189 files in other folders)
